[package]
name = "mcp-ping"
version = "0.1.0"
edition = "2021"
description = "A simple MCP server with a ping tool that responds with pong"
license = "MIT"
repository = "https://github.com/grahambrooks/mcp-dep"
authors = ["Graham Brooks graham@grahambrooks.com"]

[dependencies]
rmcp = { version = "0.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
